--- a/moto/indez.html
+++ b/moto/indez.html
@@ -13,17 +13,20 @@
 </head>
 
 <body>
+    <div class="vse">
     <div class="verx">
         <h1>Мотосалон "УДимона"</h1>
         <h1 id="moto">Мотехника</h1>
         <h1 id="akc">Шлемы</h1>
         <h1 id="shl">Акции</h1>
+    </div>
+    <div class="foto">
         <img id=logo src="IMG/Group 7 (1).png" alt="">
-
     </div>
 
+
     <div>
-        <img id="backr" src="IMG/motor_sports_racing_drift_76597_1600x900 2.png" alt="">
+
         <img id="nov" src="IMG/BrEE1N6ZQec.jpg" alt="">
     </div>
 
@@ -45,7 +48,7 @@
     </div>
 
 
-
+</div>
 </body>
 
 </html>
